fix(CSS): fix position of client to prevent repositioning if portals … (#3968)
* fix(CSS): fix position of client to prevent repositioning if portals get appended to the body

* Fixed overflowing create new entry menu

* Added sticky parent class for bulk editor to use in IE11

--- a/src/stylesheets/modules/client.styl
+++ b/src/stylesheets/modules/client.styl
@@ -1,4 +1,8 @@
 .client
-  $stretch()
+  position: fixed
+  top: 0
+  right: 0
+  bottom: 0
+  left: 0
   $layer('bottom')
   min-width: 1024px
